# python-iso8583-demo

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_visa_pin_generator.py
src/visa_auth_generator/: __init__.py  demo_3des.py  emv.py  generator.py  visa_pin_generator.py
tests/: test_emv.py  test_generator.py
