[project]
name = "visa-auth-generator"
version = "0.1.0"
description = "A utility to generate Visa ISO 8583 authorization messages."
authors = [{ name = "Gemini Code Assist" }]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyiso8583>=3.0.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
